--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="501.0" prefWidth="320" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.jarvia.jarvia.FXMLController">
     <children>
-        <Label fx:id="jarviA_talk" layoutX="47.0" layoutY="466.0" minHeight="16" minWidth="69" prefHeight="25.0" prefWidth="149.0" />
+        <Label fx:id="jarviA_talk" layoutX="46.0" layoutY="454.0" minHeight="16" minWidth="69" prefHeight="25.0" prefWidth="70.0" textFill="WHITE" />
       <ScrollPane layoutX="46.0" layoutY="14.0" prefHeight="432.0" prefWidth="228.0">
          <content>
             <Label fx:id="label2" maxHeight="1.7976931348623157E308" prefWidth="207.0" textAlignment="JUSTIFY" />
